--- a/PowerApp/CanvasManifest.json
+++ b/PowerApp/CanvasManifest.json
@@ -59,7 +59,7 @@
       "exportimportcomponents2": true,
       "externalmessage": false,
       "fluentv9controls": false,
-      "fluentv9controlspreview": false,
+      "fluentv9controlspreview": true,
       "formuladataprefetch": true,
       "formularepair": false,
       "generatedebugpublishedapp": false,
@@ -145,6 +145,7 @@
     "Pruebas Marcos",
     "Pruebas Jose",
     "Pruebas_Marcos_2",
-    "Confirmación"
+    "Confirmación",
+    "Screen3"
   ]
 }
