--- a/PowerApp/CanvasManifest.json
+++ b/PowerApp/CanvasManifest.json
@@ -143,6 +143,7 @@
     "Power_BI",
     "Lista_Kr",
     "Pruebas Marcos",
+    "Pruebas Marcos_1",
     "Pruebas Jose",
     "Pruebas_Marcos_2",
     "Confirmación",
