--- a/PowerApp/Src/Confirmaci%f3n.fx.yaml
+++ b/PowerApp/Src/Confirmaci%f3n.fx.yaml
@@ -1,47 +1,81 @@
 "Confirmación As screen.'tabletLayout_Success_ver3.0'":
     LoadingSpinnerColor: =RGBA(0, 120, 212, 1)
 
+    Image5_1 As image:
+        BorderColor: =RGBA(0, 0, 0, 0)
+        BorderStyle: =BorderStyle.None
+        BorderThickness: =2
+        DisabledBorderColor: =RGBA(0, 0, 0, 0)
+        DisabledFill: =RGBA(0, 0, 0, 0)
+        FocusedBorderThickness: =4
+        Height: =768
+        HoverBorderColor: =RGBA(0, 0, 0, 0)
+        HoverFill: =RGBA(0, 0, 0, 0)
+        Image: =Torito
+        ImagePosition: =ImagePosition.Fill
+        PressedBorderColor: =RGBA(0, 0, 0, 0)
+        PressedFill: =RGBA(0, 0, 0, 0)
+        Width: =1366
+        ZIndex: =1
+
+    Rectangle3_1 As rectangle:
+        AccessibleLabel: =
+        BorderColor: =RGBA(0, 0, 0, 0)
+        BorderStyle: =BorderStyle.None
+        BorderThickness: =2
+        DisabledFill: =RGBA(161, 159, 157, 1)
+        Fill: =RGBA(0,0,0,0.3)
+        FocusedBorderThickness: =4
+        Height: =668
+        HoverFill: =RGBA(0, 0, 0, 0.3)
+        PressedFill: =
+        Width: =1366
+        Y: =100
+        ZIndex: =2
+
     iconCircle1 As circle.Circle:
         BorderColor: =RGBA(245, 245, 245, 1)
         BorderStyle: =BorderStyle.None
         BorderThickness: =2
         DisabledFill: =RGBA(0, 120, 212, 1)
         Fill: =RGBA(0, 120, 212, 1)
+        Height: =128
         HoverFill: =RGBA(0, 120, 212, 1)
         PressedFill: =RGBA(0, 120, 212, 1)
-        X: =Parent.Width/2 - Self.Width/2
-        Y: =(Parent.Height/2 - Self.Height/2) * .7
-        ZIndex: =1
+        Width: =134
+        X: =599
+        Y: =172
+        ZIndex: =3
 
     iconCheck1 As icon.Check:
         BorderColor: =RGBA(0, 0, 0, 0)
         Color: =RGBA(255, 255, 255, 1)
         DisabledBorderColor: =RGBA(0, 0, 0, 0)
         DisabledColor: =RGBA(225, 223, 221, 1)
-        Height: =iconCircle1.Height
+        Height: =127
         Icon: =Icon.Check
         PaddingBottom: =Self.PaddingTop
         PaddingLeft: =Self.PaddingTop
         PaddingRight: =Self.PaddingTop
         PaddingTop: =24
         PressedFill: =RGBA(0, 0, 0, 0)
-        Width: =iconCircle1.Width
-        X: =Parent.Width/2 - Self.Width/2
-        Y: =(Parent.Height/2 - Self.Height/2) * .7
-        ZIndex: =2
+        Width: =134
+        X: =599
+        Y: =172
+        ZIndex: =4
 
     LblSuccessMsg1 As label:
         Align: =Align.Center
-        Color: =RGBA(50, 49, 48, 1)
+        Color: =RGBA(255, 255, 255, 1)
         DisabledColor: =RGBA(161, 159, 157, 1)
         Font: =Font.'Segoe UI'
-        Height: =48
-        Size: =20
+        Height: =54
+        Size: =30
         Text: ="Se registró correctamente el KR"
-        Width: =552
-        X: =213
-        Y: =426
-        ZIndex: =3
+        Width: =588
+        X: =386
+        Y: =315
+        ZIndex: =5
 
     Timer1 As timer:
         AutoStart: =true
@@ -63,5 +97,95 @@
         Visible: =false
         X: =40
         Y: =40
-        ZIndex: =4
+        ZIndex: =6
+
+    Button1_18 As button:
+        BorderColor: =RGBA(238,40,122,1)
+        BorderStyle: |+
+            =BorderStyle.Solid
+            
+        BorderThickness: =4
+        DisabledBorderColor: =RGBA(0, 0, 0, 0)
+        DisabledColor: =RGBA(161, 159, 157, 1)
+        DisabledFill: =RGBA(242, 242, 241, 0)
+        Fill: =RGBA(238,40,122,0.9)
+        FontWeight: =FontWeight.Semibold
+        HoverBorderColor: =RGBA(0, 0, 0, 0)
+        HoverColor: =Color.White
+        HoverFill: |-
+            =ColorValue("#EE2C70")
+        OnSelect: =Navigate(Home)
+        PressedBorderColor: =RGBA(0, 69, 120, 1)
+        PressedColor: =RGBA(255, 255, 255, 1)
+        PressedFill: =RGBA(16, 110, 190, 1)
+        RadiusBottomLeft: =08
+        RadiusBottomRight: =08
+        RadiusTopLeft: =08
+        RadiusTopRight: =08
+        Size: =15
+        Text: ="HOME"
+        X: =406
+        Y: =454
+        ZIndex: =7
+
+    Button1_19 As button:
+        BorderColor: =RGBA(238,40,122,1)
+        BorderStyle: |+
+            =BorderStyle.Solid
+            
+        BorderThickness: =4
+        DisabledBorderColor: =RGBA(0, 0, 0, 0)
+        DisabledColor: =RGBA(161, 159, 157, 1)
+        DisabledFill: =RGBA(242, 242, 241, 0)
+        Fill: =RGBA(238,40,122,0.9)
+        FontWeight: =FontWeight.Semibold
+        HoverBorderColor: =RGBA(0, 0, 0, 0)
+        HoverColor: =Color.White
+        HoverFill: |-
+            =ColorValue("#EE2C70")
+        OnSelect: =Navigate('Pruebas Jose')
+        PressedBorderColor: =RGBA(0, 69, 120, 1)
+        PressedColor: =RGBA(255, 255, 255, 1)
+        PressedFill: =RGBA(16, 110, 190, 1)
+        RadiusBottomLeft: =08
+        RadiusBottomRight: =08
+        RadiusTopLeft: =08
+        RadiusTopRight: =08
+        Size: =15
+        Text: ="REGISTRAR TAREA"
+        Width: =205
+        X: =733
+        Y: =454
+        ZIndex: =8
+
+    Rectangle1_3 As rectangle:
+        BorderColor: =RGBA(0, 0, 0, 0)
+        BorderStyle: =BorderStyle.None
+        BorderThickness: =2
+        DisabledFill: =RGBA(161, 159, 157, 1)
+        Fill: =RGBA(0, 153, 204, 1)
+        FocusedBorderThickness: =4
+        HoverFill: |-
+            =ColorValue("#0099CC")
+        PressedFill: =RGBA(0, 120, 212, 1)
+        Width: =1366
+        ZIndex: =9
+
+    Image3_3 As image:
+        BorderColor: =RGBA(0, 0, 0, 0)
+        BorderStyle: =BorderStyle.None
+        BorderThickness: =2
+        DisabledBorderColor: =RGBA(0, 0, 0, 0)
+        DisabledFill: =RGBA(0, 0, 0, 0)
+        FocusedBorderThickness: =4
+        Height: =70
+        HoverBorderColor: =RGBA(0, 0, 0, 0)
+        HoverFill: =RGBA(0, 0, 0, 0)
+        Image: ='Logo-pacifico-blanco'
+        PressedBorderColor: =RGBA(0, 0, 0, 0)
+        PressedFill: =RGBA(0, 0, 0, 0)
+        Width: =304
+        X: =125
+        Y: =15
+        ZIndex: =10
 
