--- a/PowerApp/Src/Confirmaci%f3n.fx.yaml
+++ b/PowerApp/Src/Confirmaci%f3n.fx.yaml
@@ -143,7 +143,7 @@
         HoverColor: =Color.White
         HoverFill: |-
             =ColorValue("#EE2C70")
-        OnSelect: =Navigate('Pruebas Jose')
+        OnSelect: =Navigate('Pruebas Marcos_1')
         PressedBorderColor: =RGBA(0, 69, 120, 1)
         PressedColor: =RGBA(255, 255, 255, 1)
         PressedFill: =RGBA(16, 110, 190, 1)
