--- a/PowerApp/CanvasManifest.json
+++ b/PowerApp/CanvasManifest.json
@@ -147,7 +147,7 @@
     "Pruebas Marcos_1",
     "Pruebas Jose",
     "Pruebas_Marcos_2",
-    "Confirmación",
+    "Confirmacion",
     "Screen3"
   ]
 }
