--- a/PowerApp/Src/Confirmacion.fx.yaml
+++ b/PowerApp/Src/Confirmacion.fx.yaml
@@ -1,4 +1,4 @@
-"Confirmación As screen.'tabletLayout_Success_ver3.0'":
+"Confirmacion As screen.'tabletLayout_Success_ver3.0'":
     LoadingSpinnerColor: =RGBA(0, 120, 212, 1)
 
     Image5_1 As image:
