--- a/PowerApp/Src/Pruebas Jose.fx.yaml
+++ b/PowerApp/Src/Pruebas Jose.fx.yaml
@@ -1214,6 +1214,7 @@
                 SelectionFill: =RGBA(0, 120, 212, 1)
                 SelectMultiple: =false
                 Size: =13
+                Template: =ListItemTemplate.Person
                 Tooltip: =Parent.DisplayName
                 Width: =Parent.Width - 60
                 X: =30
