--- a/PowerApp/Src/Pruebas Marcos_1.fx.yaml
+++ b/PowerApp/Src/Pruebas Marcos_1.fx.yaml
@@ -663,6 +663,7 @@
                 SearchItems: =Choices(T_TAREAS_APP_GCI_003.responsableTarea,DataCardValue11.SearchText)
                 SelectionFill: =RGBA(0, 120, 212, 1)
                 Size: =13
+                Template: =ListItemTemplate.Person
                 Tooltip: =Parent.DisplayName
                 Width: =(Parent.Width - 60) * 0.6
                 X: =DataCardKey21.X + DataCardKey21.Width
