--- a/PowerApp/Src/Pruebas_Marcos_2.fx.yaml
+++ b/PowerApp/Src/Pruebas_Marcos_2.fx.yaml
@@ -1556,6 +1556,7 @@ Pruebas_Marcos_2 As screen:
                 SelectionFill: =RGBA(0, 120, 212, 1)
                 SelectMultiple: =false
                 Size: =13
+                Template: =ListItemTemplate.Person
                 Tooltip: =Parent.DisplayName
                 Width: =Parent.Width - 60
                 X: =30
