--- a/PowerApp/Src/Pruebas Marcos.fx.yaml
+++ b/PowerApp/Src/Pruebas Marcos.fx.yaml
@@ -190,7 +190,9 @@
         HoverColor: =Color.White
         HoverFill: |-
             =ColorValue("#EE2C70")
-        OnSelect: =Navigate(Home)
+        OnSelect: |-
+            =Navigate(Home);
+            ResetForm(form_Registrar)
         PressedBorderColor: =RGBA(0, 69, 120, 1)
         PressedColor: =RGBA(255, 255, 255, 1)
         PressedFill: =RGBA(16, 110, 190, 1)
